[package]
name = "multiemu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde-inline-default = "0.2"
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ron = "0.8"
rayon = "1.10"
nalgebra = { version = "0.33", features = [
    "serde-serialize",
    "convert-bytemuck",
    "rayon",
] }
egui = { version = "0.30", features = ["default_fonts", "rayon", "log"] }
egui_extras = { version = "0.30", default-features = false, features = [
    "image",
] }
image = { version = "0.25", default-features = false, features = ["webp"] }
bytemuck = { version = "1.21", features = ["derive"] }
palette = { version = "0.7", features = ["bytemuck", "serializing"] }
arrayvec = { version = "0.7", features = ["serde"] }
data-encoding = "2.7"
sha1 = "0.10"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
indexmap = { version = "2.7", features = ["serde"] }
ringbuffer = "0.15"
num = "0.4"
thiserror = "2.0"
itertools = "0.14"
bitvec = "1.0"
rand = "0.8"
native_db = "0.8"
native_model = "0.4"
walkdir = "2.5"
rangemap = "1.5"
enumflags2 = "0.7"
petgraph = "0.7"
downcast-rs = "2.0"
dashmap = "6.1"
strsim = "0.11"

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dependencies]
winit = { version = "0.30", default-features = false, features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_05",
    "rwh_06",
    "android-game-activity",
] }
egui-winit = { version = "0.30", default-features = false, features = [
    "android-game-activity",
    "links",
    "wayland",
    "x11",
] }
vulkano = { version = "0.34", default-features = false }
dirs = "6.0"
softbuffer = "0.4"
# Cli tool stuff
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2.2"

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }

[build-dependencies]
cfg_aliases = "0.2"

[features]
